--- a/views/includes/use.jade
+++ b/views/includes/use.jade
@@ -15,11 +15,11 @@ div._demo--container
     div(id='use--data-identified')
     h2.use--header Necesito unas fotos de tu Vehículo
     div Para acelerar el proceso de emisión de tu póliza necesito que tomes unas fotos de tu auto, en las posiciones indicadas.
-    div(class='use--example-images use--example-images_default')    
+    div(class='use--example-images use--example-images_default')
       label(class='use--example-thumb square', for='use--file1')
-        img(class='use--example-image', src='images/samples/auto_frente.jpg')
+        img(id='use--image1', class='use--example-image', src='images/samples/auto_frente.jpg')
         div(class='use--example-image-overlay')
-        input(id='use--file1', class='use--file-input', type='file', name='images_file', accept='image/*', title='Choose an image to upload')
+        input(onchange='showImage(this, 1)', id='use--file1', class='use--file-input', type='file', name='images_file', accept='image/*', title='Choose an image to upload')
       label(class='use--example-thumb square', for='use--file2')
         img(class='use--example-image', src='images/samples/auto_derecha.jpg')
         div(class='use--example-image-overlay')
@@ -54,7 +54,6 @@ div._demo--container
     .loader-container
       svg.loader(viewBox='25 25 50 50')
         circle.loader__path(cx='50', cy='50', r='20')
-    p.base--p.use--loading-message.loading--message Reconociendo y analizando imagen...
   .error.use--error.display-none
     img.use--error-image.error--image(src='images/icons/alert.svg')
     p.base--p.use--error-message.error--message Visual Recognition is not available right now...
