--- a/views/use.jade
+++ b/views/use.jade
@@ -4,9 +4,7 @@ block content
   .tab-panels.tab-views(role='tabpanel')
     ul.tab-panels--tab-list.tab-views--tab-list(role='tablist')
       li.tab-panels--tab-list-item.tab-views--tab-list-item.base--li(role='presentation')
-        a.tab-panels--tab.tab-views--tab.active(href='/', aria-controls='panel1', role='tab') Pablo R. 
-        br
-        p Tu Productor Asesor (mat. 123123)
+        img(src='/images/header.png')
       //li.tab-panels--tab-list-item.tab-views--tab-list-item.base--li(role='presentation')
       //  a.tab-panels--tab.tab-views--tab(href='/train', aria-controls='panel2', role='tab') Entrenar
     .tab-panels--tab-content
